--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "@capacitor/core": "https://esm.sh/@capacitor/core@^6.0.0",
     "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@^6.0.0",
-    "@capacitor-community/file-opener": "https://esm.sh/@capacitor-community/file-opener@^6.0.0"
+    "@capacitor-community/file-opener": "https://esm.sh/@capacitor-community/file-opener@^6.0.0",
+    "@capacitor/app": "https://esm.sh/@capacitor/app@^6.0.0"
   }
 }
 </script>
