--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
   <title>Nova Explorer</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -29,6 +30,11 @@
     }
   </script>
   <style>
+    html, body {
+      height: 100%;
+      overscroll-behavior: none; /* Prevent bounce effects */
+    }
+
     /* Custom Scrollbar for a more native feel */
     ::-webkit-scrollbar {
       width: 6px;
@@ -82,7 +88,7 @@
 </head>
 
 <body class="bg-white dark:bg-slate-950 text-slate-900 dark:text-slate-100 overflow-hidden transition-colors duration-300">
-  <div id="root">
+  <div id="root" class="h-full">
     <script type="module" src="/index.tsx"></script>
   </div>
 </body>
